fixed some overlap styling

--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,9 @@ body {
   margin: 60px auto;
   width: 70%; }
 
+.kss-body {
+  width: 100%; }
+
 body {
   text-rendering: optimizeLegibility; }
 
